2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/Freight_Calculator__c.object-meta.xml
<CustomObject>
    <label>Freight Calculator</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Freight No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Calculator</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>