2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Weight__c</fullName>
    <description>Chargeable Weight is the Max between Total Artworks Weight and Volumetric Weight</description>
    <formula>IF(Total_Artworks_Weight__c &gt; Volumetric_Weight_Total__c, Total_Artworks_Weight__c, Volumetric_Weight_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Chargeable Weight is the Max between Total Artworks Weight and Volumetric Weight</inlineHelpText>
    <label>Chargeable Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>