2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Collection_Address__c.field-meta.xml
<CustomField>
    <fullName>Collection_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>