2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Collection_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Collection_Mobile__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>