2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Collection_Phone__c.field-meta.xml
<CustomField>
    <fullName>Collection_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>