2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Collection_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Collection_Zip_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>