2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Freight Calculator</relationshipLabel>
    <relationshipName>Freight_Calculator</relationshipName>
    <type>Lookup</type>
</CustomField>