2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <summarizedField>FreightProductLineItem__c.Price__c</summarizedField>
    <summaryForeignKey>FreightProductLineItem__c.Freight_Calculator__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>