2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Crate_Length_To_Be__c.field-meta.xml
<CustomField>
    <fullName>Crate_Length_To_Be__c</fullName>
    <formula>Maximum_Length__c + 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate Length To Be</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>