2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Description_of_Items__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Items__c</fullName>
    <label>Description of Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>