2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hong Kong (HKG airport)</fullName>
                <default>true</default>
                <label>Hong Kong (HKG airport)</label>
            </value>
            <value>
                <fullName>Singapore (SIN airport)</fullName>
            </value>
            <value>
                <fullName>Japan (NRT airport)</fullName>
            </value>
            <value>
                <fullName>Korea (ICN airport)</fullName>
            </value>
            <value>
                <fullName>Taiwan (TPE airport)</fullName>
            </value>
            <value>
                <fullName>Beijing (PEK airport)</fullName>
            </value>
            <value>
                <fullName>Shanghai (PVG airport)</fullName>
            </value>
            <value>
                <fullName>Australia (SYD airport)</fullName>
            </value>
            <value>
                <fullName>London (LHR airport)</fullName>
            </value>
            <value>
                <fullName>New York (JFK airport)</fullName>
            </value>
            <value>
                <fullName>Los Angeles (LAX airport)</fullName>
            </value>
            <value>
                <fullName>Paris (CDG airport)</fullName>
            </value>
            <value>
                <fullName>Amsterdam (AMS airport)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>