2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Destination_State__c.field-meta.xml
<CustomField>
    <fullName>Destination_State__c</fullName>
    <label>State/Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>