2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Maximum_Height__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Height__c</fullName>
    <label>Maximum Height</label>
    <summarizedField>Temporary_Artwork__c.Height__c</summarizedField>
    <summaryForeignKey>Temporary_Artwork__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>