2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Maximum_Length__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Length__c</fullName>
    <label>Maximum Length</label>
    <summarizedField>Temporary_Artwork__c.Length__c</summarizedField>
    <summaryForeignKey>Temporary_Artwork__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>