2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Products_Added__c.field-meta.xml
<CustomField>
    <fullName>Products_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Box to determine if Products have been added already to the Freight Calculator</description>
    <inlineHelpText>Check Box to determine if Products have been added already to the Freight Calculator</inlineHelpText>
    <label>Products Added</label>
    <type>Checkbox</type>
</CustomField>