2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Sum_of_Width__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Width__c</fullName>
    <label>Sum of Width</label>
    <summarizedField>Temporary_Artwork__c.Breadth__c</summarizedField>
    <summaryForeignKey>Temporary_Artwork__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>