2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Total_Artworks_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Artworks_Weight__c</fullName>
    <label>Total Artworks Weight</label>
    <summarizedField>Temporary_Artwork__c.Chargeable_Weight__c</summarizedField>
    <summaryForeignKey>Temporary_Artwork__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>