2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Total_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Declared_Value__c</fullName>
    <description>Total Declared Value</description>
    <inlineHelpText>Total Declared Value of All Artworks</inlineHelpText>
    <label>Total Declared Value</label>
    <summarizedField>Temporary_Artwork__c.Declared_Value__c</summarizedField>
    <summaryForeignKey>Temporary_Artwork__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>