2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Type_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Services__c</fullName>
    <label>Type of Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>