2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/fields/Volumetric_Weight_Total__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_Weight_Total__c</fullName>
    <description>Volumetric Weight Total of all Crates Added</description>
    <inlineHelpText>Volumetric Weight Total of all Crates Added</inlineHelpText>
    <label>Volumetric Weight Total</label>
    <summarizedField>Temporary_Crate__c.Volumetric_Weight__c</summarizedField>
    <summaryForeignKey>Temporary_Crate__c.Freight_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>