2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/validationRules/CollectionCity_Changeafter_Products_Add.validationRule-meta.xml
<ValidationRule>
    <fullName>CollectionCity_Changeafter_Products_Add</fullName>
    <active>true</active>
    <description>After the Freight calculator has been run and Products added, Collection City must not be changed.</description>
    <errorConditionFormula>AND(
    ISCHANGED( Collection_City__c )  ,
    Products_Added__c = TRUE  )</errorConditionFormula>
    <errorDisplayField>Collection_City__c</errorDisplayField>
    <errorMessage>After the Freight calculator has been run and Products added, Collection City must not be changed.</errorMessage>
</ValidationRule>