2nd training/Community/Community/Community1/force-app/main/default/objects/Freight_Calculator__c/validationRules/DestinationCity_ChangAfterProducts_Added.validationRule-meta.xml
<ValidationRule>
    <fullName>DestinationCity_ChangAfterProducts_Added</fullName>
    <active>true</active>
    <description>After the Freight calculator has been run and Products added, Destination City must not be changed.</description>
    <errorConditionFormula>AND(
   ISCHANGED(Destination_City__c),
    Products_Added__c = TRUE 
 )</errorConditionFormula>
    <errorDisplayField>Destination_City__c</errorDisplayField>
    <errorMessage>After the Freight calculator has been run and Products added, Destination City must not be changed.</errorMessage>
</ValidationRule>